Fix topic spans with "-" being wrapped

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18311,6 +18311,7 @@ input.changelog-input {
     font-weight: 500;
     text-align: center;
     padding: 0 12px;
+    white-space: nowrap;
 }
 .topics > ul > li > a > img.icon {
     float: left;
